[package]
name = "rchip8"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rchip8"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
rand = "0.8.3"
clap = { version = "4", features = ["derive"]}